tests/paczka1/small_fuzzy/28458288.err
Error in line 2: ZeM S713 86,6
Error in line 11: v8gfxgpo S713 82,2
Error in line 7: FZs S702 59,9
